refactor 공유 게시물 조회 변경
- 기존 Offset방식에서 커서 기반으로 변경
- cursorID로 마지막 레코드만 받아서 조회
- nextCursor와 hasNext로 다음 레코드 존재시 id값과 true반환
- 프론트 작업 끝나면 PR할 계획